test/fixtures/fixtures/type-error/decorators.lys.ast.desugar
|-Document(0,303)
  |-(AstCons)
    |-(AstCons)
      |-(AstCons)
        |-(AstCons)
          |-(AstCons)
            |-(AstCons)
              |-(AstCons)
                |-(AstCons)
                  |-FunctionDirective(0,28)
                    |-(AstCons)
                      |-Decorators(0,10)
                        |-Decorator(0,10)
                          |-NameIdentifier(2,8)
                            |-Identifier=inline
                      |-(AstCons)
                        |-NoModifier(10,10)
                          <Rule0>
                        |-FunDeclaration(10,28)
                          |-(AstCons)
                            |-NameIdentifier(14,15)
                              |-Identifier=x
                            |-(AstCons)
                              |-TypeParameters(15,15)
                                <Rule0>
                              |-(AstCons)
                                |-FunctionParamsList(15,17)
                                  |-(List)(16,16)
                                    <Rule0>
                                |-(AstCons)
                                  |-ReturnType(17,24)
                                    |-Reference(19,23)
                                      |-QName(19,23)
                                        |-NameIdentifier(19,23)
                                          |-Identifier=void
                                  |-FunctionBody(24,28)
                                    |-CodeBlock(26,28)
                                      <Rule0>
                  |-FunctionDirective(30,58)
                    |-(AstCons)
                      |-Decorators(30,37)
                        |-Decorator(30,37)
                          |-NameIdentifier(32,35)
                            |-Identifier=asd
                      |-(AstCons)
                        |-NoModifier(37,37)
                          <Rule0>
                        |-FunDeclaration(37,58)
                          |-(AstCons)
                            |-NameIdentifier(41,45)
                              |-Identifier=test
                            |-(AstCons)
                              |-TypeParameters(45,45)
                                <Rule0>
                              |-(AstCons)
                                |-FunctionParamsList(45,47)
                                  |-(List)(46,46)
                                    <Rule0>
                                |-(AstCons)
                                  |-ReturnType(47,54)
                                    |-Reference(49,53)
                                      |-QName(49,53)
                                        |-NameIdentifier(49,53)
                                          |-Identifier=void
                                  |-FunctionBody(54,58)
                                    |-CodeBlock(56,58)
                                      <Rule0>
                |-FunctionDirective(60,91)
                  |-(AstCons)
                    |-Decorators(60,70)
                      |-Decorator(60,70)
                        |-NameIdentifier(62,68)
                          |-Identifier=export
                    |-(AstCons)
                      |-NoModifier(70,70)
                        <Rule0>
                      |-FunDeclaration(70,91)
                        |-(AstCons)
                          |-NameIdentifier(74,78)
                            |-Identifier=main
                          |-(AstCons)
                            |-TypeParameters(78,78)
                              <Rule0>
                            |-(AstCons)
                              |-FunctionParamsList(78,80)
                                |-(List)(79,79)
                                  <Rule0>
                              |-(AstCons)
                                |-ReturnType(80,87)
                                  |-Reference(82,86)
                                    |-QName(82,86)
                                      |-NameIdentifier(82,86)
                                        |-Identifier=void
                                |-FunctionBody(87,91)
                                  |-CodeBlock(89,91)
                                    <Rule0>
              |-FunctionDirective(93,129)
                |-(AstCons)
                  |-Decorators(93,107)
                    |-Decorator(93,107)
                      |-(AstCons)
                        |-NameIdentifier(95,101)
                          |-Identifier=export
                        |-NumberLiteral=123
                  |-(AstCons)
                    |-NoModifier(107,107)
                      <Rule0>
                    |-FunDeclaration(107,129)
                      |-(AstCons)
                        |-NameIdentifier(111,116)
                          |-Identifier=test2
                        |-(AstCons)
                          |-TypeParameters(116,116)
                            <Rule0>
                          |-(AstCons)
                            |-FunctionParamsList(116,118)
                              |-(List)(117,117)
                                <Rule0>
                            |-(AstCons)
                              |-ReturnType(118,125)
                                |-Reference(120,124)
                                  |-QName(120,124)
                                    |-NameIdentifier(120,124)
                                      |-Identifier=void
                              |-FunctionBody(125,129)
                                |-CodeBlock(127,129)
                                  <Rule0>
            |-FunctionDirective(131,170)
              |-(AstCons)
                |-Decorators(131,148)
                  |-Decorator(131,148)
                    |-(AstCons)
                      |-NameIdentifier(133,139)
                        |-Identifier=export
                      |-StringLiteral="test"
                |-(AstCons)
                  |-NoModifier(148,148)
                    <Rule0>
                  |-FunDeclaration(148,170)
                    |-(AstCons)
                      |-NameIdentifier(152,157)
                        |-Identifier=test3
                      |-(AstCons)
                        |-TypeParameters(157,157)
                          <Rule0>
                        |-(AstCons)
                          |-FunctionParamsList(157,159)
                            |-(List)(158,158)
                              <Rule0>
                          |-(AstCons)
                            |-ReturnType(159,166)
                              |-Reference(161,165)
                                |-QName(161,165)
                                  |-NameIdentifier(161,165)
                                    |-Identifier=void
                            |-FunctionBody(166,170)
                              |-CodeBlock(168,170)
                                <Rule0>
          |-FunctionDirective(172,207)
            |-(AstCons)
              |-Decorators(172,185)
                |-Decorator(172,185)
                  |-(AstCons)
                    |-NameIdentifier(174,180)
                      |-Identifier=export
                    |-StringLiteral=""
              |-(AstCons)
                |-NoModifier(185,185)
                  <Rule0>
                |-FunDeclaration(185,207)
                  |-(AstCons)
                    |-NameIdentifier(189,194)
                      |-Identifier=test4
                    |-(AstCons)
                      |-TypeParameters(194,194)
                        <Rule0>
                      |-(AstCons)
                        |-FunctionParamsList(194,196)
                          |-(List)(195,195)
                            <Rule0>
                        |-(AstCons)
                          |-ReturnType(196,203)
                            |-Reference(198,202)
                              |-QName(198,202)
                                |-NameIdentifier(198,202)
                                  |-Identifier=void
                          |-FunctionBody(203,207)
                            |-CodeBlock(205,207)
                              <Rule0>
        |-FunctionDirective(209,256)
          |-(AstCons)
            |-Decorators(209,231)
              |-Decorator(209,231)
                |-(AstCons)
                  |-NameIdentifier(211,217)
                    |-Identifier=extern
                  |-(AstCons)
                    |-StringLiteral="asd"
                    |-StringLiteral="dsa"
            |-(AstCons)
              |-NoModifier(231,231)
                <Rule0>
              |-FunDeclaration(231,256)
                |-(AstCons)
                  |-NameIdentifier(235,243)
                    |-Identifier=imported
                  |-(AstCons)
                    |-TypeParameters(243,243)
                      <Rule0>
                    |-(AstCons)
                      |-FunctionParamsList(243,245)
                        |-(List)(244,244)
                          <Rule0>
                      |-(AstCons)
                        |-ReturnType(245,252)
                          |-Reference(247,251)
                            |-QName(247,251)
                              |-NameIdentifier(247,251)
                                |-Identifier=void
                        |-FunctionBody(252,256)
                          |-CodeBlock(254,256)
                            <Rule0>
      |-FunctionDirective(260,303)
        |-(AstCons)
          |-Decorators(260,278)
            |-Decorator(260,278)
              |-(AstCons)
                |-NameIdentifier(262,268)
                  |-Identifier=extern
                |-(AstCons)
                  |-BooleanLiteral(269,274)
                    <Rule0>
                  |-NumberLiteral=1
          |-(AstCons)
            |-NoModifier(278,278)
              <Rule0>
            |-FunDeclaration(278,303)
              |-(AstCons)
                |-NameIdentifier(282,290)
                  |-Identifier=imported
                |-(AstCons)
                  |-TypeParameters(290,290)
                    <Rule0>
                  |-(AstCons)
                    |-FunctionParamsList(290,292)
                      |-(List)(291,291)
                        <Rule0>
                    |-(AstCons)
                      |-ReturnType(292,299)
                        |-Reference(294,298)
                          |-QName(294,298)
                            |-NameIdentifier(294,298)
                              |-Identifier=void
                      |-FunctionBody(299,303)
                        |-CodeBlock(301,303)
                          <Rule0>
    |-EndOfFile=